--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 
 @import url('https://fonts.googleapis.com/css?family=Rajdhani:300,400,500,600,700');
 @import url('https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i');
-
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,500;1,400&display=swap');
 /*****---------------------------------------- 1) font-family: 'Rajdhani', sans-serif;
  2) font-family: 'Poppins', sans-serif;
  ----------------------------------------*****/
@@ -39,7 +39,8 @@ html {
 body {
      color: #666666;
      font-size: 14px;
-     font-family: Poppins;
+     /* font-family: Poppins; */
+     font-family: 'Open Sans', sans-serif;
      line-height: 1.80857;
      font-weight: normal;
      overflow-x: hidden;
